k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: multi-board
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: nishanb/multiboard-server
        ports:
        - containerPort: 3000
          name: http
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
