k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: multi-board
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
  - name: client
    protocol: TCP
    port: 8080
    targetPort: 8080
