k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: multi-board
spec:
  selector:
    app: server
  type: ClusterIP
  ports:
  - name: server
    protocol: TCP
    port: 3000
    targetPort: 3000
